created separate enum for metrics

--- a/eva-accession-clustering/src/main/resources/application.properties
+++ b/eva-accession-clustering/src/main/resources/application.properties
@@ -13,6 +13,8 @@ parameters.projectAccession=
 
 parameters.chunkSize=100
 
+parameters.countStatsUrl=|eva.count-stats.url|
+
 
 accessioning.instanceId=instance-01
 accessioning.submitted.categoryId=ss
