calling count-stats webservice with authentication

--- a/eva-accession-clustering/src/main/resources/application.properties
+++ b/eva-accession-clustering/src/main/resources/application.properties
@@ -13,8 +13,9 @@ parameters.projectAccession=
 
 parameters.chunkSize=100
 
-parameters.countStatsUrl=|eva.count-stats.url|
-
+eva.count-stats.url=|eva.count-stats.url|
+eva.count-stats.username=|eva.count-stats.username|
+eva.count-stats.password=|eva.count-stats.password|
 
 accessioning.instanceId=instance-01
 accessioning.submitted.categoryId=ss
