--- a/eva-accession-clustering/src/test/resources/clustering-pipeline-test.properties
+++ b/eva-accession-clustering/src/test/resources/clustering-pipeline-test.properties
@@ -3,7 +3,9 @@ parameters.projectAccession=projectId_1
 parameters.assemblyAccession=GCA_000000001.1
 parameters.chunkSize=2
 
-parameters.countStatsUrl=http://localhost:8080
+eva.count-stats.url=http://localhost:8080
+eva.count-stats.username=username
+eva.count-stats.password=password
 
 accessioning.instanceId=instance-01
 accessioning.submitted.categoryId=ss
