Use INSDC contig naming to store release records

--- a/eva-accession-release/src/main/resources/application.properties
+++ b/eva-accession-release/src/main/resources/application.properties
@@ -6,6 +6,7 @@ parameters.assemblyReportUrl=
 parameters.outputFolder=
 parameters.forceRestart=false
 parameters.chunkSize=100
+parameters.contigNaming=SEQUENCE_NAME
 
 # job repository datasource
 spring.datasource.driver-class-name=org.postgresql.Driver
