--- a/eva-accession-release/src/test/resources/incremental-release-pipeline-test.properties
+++ b/eva-accession-release/src/test/resources/incremental-release-pipeline-test.properties
@@ -14,6 +14,7 @@ parameters.assemblyReportUrl=file:src/test/resources/input-files/assembly-report
 parameters.outputFolder=/tmp/
 parameters.forceRestart=false
 parameters.chunkSize=5
+parameters.contigNaming=INSDC
 
 spring.data.mongodb.database=test-db
 mongodb.read-preference=primary
