Explicit contig naming for release properties

--- a/eva-accession-release/src/test/resources/application.properties
+++ b/eva-accession-release/src/test/resources/application.properties
@@ -13,6 +13,7 @@ parameters.assemblyReportUrl=file:src/test/resources/input-files/assembly-report
 parameters.outputFolder=/tmp/
 parameters.forceRestart=false
 parameters.chunkSize=1000
+parameters.contigNaming=SEQUENCE_NAME
 
 
 spring.data.mongodb.database=test-db
