--- a/eva-accession-clustering/src/test/resources/clustering-pipeline-test.properties
+++ b/eva-accession-clustering/src/test/resources/clustering-pipeline-test.properties
@@ -12,10 +12,10 @@ accessioning.submitted.categoryId=ss
 accessioning.clustered.categoryId=rs
 
 accessioning.monotonic.ss.blockSize=100000
-accessioning.monotonic.ss.blockStartValue=5000000000
+accessioning.monotonic.ss.blockStartValue=5
 accessioning.monotonic.ss.nextBlockInterval=1000000000
 accessioning.monotonic.rs.blockSize=100000
-accessioning.monotonic.rs.blockStartValue=3000000000
+accessioning.monotonic.rs.blockStartValue=5
 accessioning.monotonic.rs.nextBlockInterval=1000000000
 
 
