disable spring embedded tomcat in batch applications

--- a/eva-remapping-get-source/src/main/resources/application.properties
+++ b/eva-remapping-get-source/src/main/resources/application.properties
@@ -49,3 +49,6 @@ spring.main.allow-bean-definition-overriding=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 logging.level.uk.ac.ebi.eva.accession.remapping=INFO
+
+# as this is a spring batch application, disable the embedded tomcat. This is the new way to do that for spring 2.
+spring.main.web-application-type=none
