--- a/eva-remapping-ingest/src/main/resources/application.properties
+++ b/eva-remapping-ingest/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.main.allow-bean-definition-overriding=true
 spring.jmx.enabled=false
 
 build.version=|project.version|
+
+# as this is a spring batch application, disable the embedded tomcat. This is the new way to do that for spring 2.
+spring.main.web-application-type=none
