add property to import pipeline

--- a/eva-accession-import/src/main/resources/application.properties
+++ b/eva-accession-import/src/main/resources/application.properties
@@ -40,3 +40,6 @@ spring.main.allow-bean-definition-overriding=true
 
 # To work around this bug: https://github.com/pgjdbc/pgjdbc/issues/1102
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# as this is a spring batch application, disable the embedded tomcat. This is the new way to do that for spring 2.
+spring.main.web-application-type=none
