Extract back-propagation logic to separate step

--- a/eva-accession-clustering/src/test/resources/clustering-writer-test.properties
+++ b/eva-accession-clustering/src/test/resources/clustering-writer-test.properties
@@ -1,6 +1,7 @@
 parameters.vcf=src/test/resources/input-files/vcf/aggregated_accessioned.vcf.gz
 parameters.projectAccession=projectId_1
 parameters.assemblyAccession=asm2
+parameters.remappedFrom=asm1
 parameters.chunkSize=2
 
 eva.count-stats.url=http://localhost:8080
