--- a/eva-accession-clustering/src/test/resources/merge-split-test.properties
+++ b/eva-accession-clustering/src/test/resources/merge-split-test.properties
@@ -1,6 +1,7 @@
 parameters.vcf=src/test/resources/input-files/vcf/aggregated_accessioned.vcf.gz
 parameters.projectAccession=projectId_1
 parameters.assemblyAccession=GCA_000000001.1
+parameters.remappedFrom=ASM1
 parameters.chunkSize=2
 
 eva.count-stats.url=http://localhost:8080
