--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
                 <version>${variation-commons-version}</version>
             </dependency>
             <dependency>
+                <groupId>uk.ac.ebi.eva</groupId>
+                <artifactId>eva-metrics</artifactId>
+                <version>0.0.1</version>
+            </dependency>
+            <dependency>
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>42.2.5</version>
