adding eva-metrics count to accessioning

--- a/eva-accession-pipeline/pom.xml
+++ b/eva-accession-pipeline/pom.xml
@@ -22,6 +22,10 @@
             <groupId>uk.ac.ebi.eva</groupId>
             <artifactId>eva-accession-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.eva</groupId>
+            <artifactId>eva-metrics</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
