fixed mock server issue

--- a/eva-accession-pipeline/src/test/resources/properties/accession-pipeline-test.properties
+++ b/eva-accession-pipeline/src/test/resources/properties/accession-pipeline-test.properties
@@ -1,6 +1,10 @@
 accessioning.instanceId=test-instance-01
 accessioning.submitted.categoryId=test-pipeline-ss
 
+eva.count-stats.url=http://localhost:8080
+eva.count-stats.username=username
+eva.count-stats.password=password
+
 accessioning.monotonic.test-pipeline-ss.blockSize=100000
 accessioning.monotonic.test-pipeline-ss.blockStartValue=5000000000
 accessioning.monotonic.test-pipeline-ss.nextBlockInterval=1000000000
