--- a/eva-accession-ws/pom.xml
+++ b/eva-accession-ws/pom.xml
@@ -57,6 +57,17 @@
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.eva</groupId>
+            <artifactId>eva-accession-clustering</artifactId>
+            <version>0.5.6-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.ampt2d</groupId>
+            <artifactId>accession-commons-core</artifactId>
+            <version>0.7.5-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
