--- a/eva-accession-ws/pom.xml
+++ b/eva-accession-ws/pom.xml
@@ -60,6 +60,7 @@
         <dependency>
             <groupId>uk.ac.ebi.eva</groupId>
             <artifactId>eva-accession-clustering</artifactId>
+            <version>0.6.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
