--- a/eva-accession-ws/pom.xml
+++ b/eva-accession-ws/pom.xml
@@ -66,7 +66,7 @@
         <dependency>
             <groupId>uk.ac.ebi.ampt2d</groupId>
             <artifactId>accession-commons-core</artifactId>
-            <version>0.7.5-SNAPSHOT</version>
+            <version>0.7.5</version>
         </dependency>
 
     </dependencies>
