--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>4.13</junit.version>
         <variation-commons-version>0.8.0</variation-commons-version>
-        <accession-commons-version>0.7.5-SNAPSHOT</accession-commons-version>
+        <accession-commons-version>0.7.5</accession-commons-version>
     </properties>
 
     <parent>
