--- a/eva-accession-ws/pom.xml
+++ b/eva-accession-ws/pom.xml
@@ -57,18 +57,12 @@
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
         </dependency>
+
         <dependency>
-            <groupId>uk.ac.ebi.eva</groupId>
-            <artifactId>eva-accession-clustering</artifactId>
-            <version>0.6.1</version>
+            <groupId>com.lordofthejars</groupId>
+            <artifactId>nosqlunit-mongodb</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>uk.ac.ebi.ampt2d</groupId>
-            <artifactId>accession-commons-core</artifactId>
-            <version>0.7.5</version>
-        </dependency>
-
     </dependencies>
 
     <build>
