toggle retryable behaviour for clustering mongo reader

--- a/eva-accession-clustering/src/main/resources/application.properties
+++ b/eva-accession-clustering/src/main/resources/application.properties
@@ -12,6 +12,7 @@ parameters.vcf=
 parameters.projectAccession=
 
 parameters.chunkSize=100
+parameters.allowRetry = false
 
 eva.count-stats.url=|eva.count-stats.url|
 eva.count-stats.username=|eva.count-stats.username|
