--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>uk.ac.ebi.eva</groupId>
     <artifactId>eva-accession</artifactId>
-    <version>0.6.8-SNAPSHOT</version>
+    <version>0.6.8</version>
     <packaging>pom</packaging>
 
     <name>eva-accession</name>
@@ -41,12 +41,12 @@
             <dependency>
                 <groupId>uk.ac.ebi.eva</groupId>
                 <artifactId>eva-accession-core</artifactId>
-                <version>0.6.8-SNAPSHOT</version>
+                <version>0.6.8</version>
             </dependency>
             <dependency>
                 <groupId>uk.ac.ebi.eva</groupId>
                 <artifactId>eva-remapping-get-source</artifactId>
-                <version>0.6.8-SNAPSHOT</version>
+                <version>0.6.8</version>
             </dependency>
             <dependency>
                 <groupId>uk.ac.ebi.ampt2d</groupId>
