adding missing property

--- a/eva-remapping-ingest/pom.xml
+++ b/eva-remapping-ingest/pom.xml
@@ -71,4 +71,8 @@
         </resources>
     </build>
 
+    <properties>
+        <eva.mongo.host.test>localhost</eva.mongo.host.test>
+    </properties>
+
 </project>
