--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,7 @@ test:
         name: test-env
     only:
         - master
+        - test_release_deployment
         - tags
 
 # Not executed, parent job definition for package
