--- a/eva-accession-release/pom.xml
+++ b/eva-accession-release/pom.xml
@@ -70,4 +70,8 @@
             </plugin>
         </plugins>
     </build>
+
+    <properties>
+        <eva.mongo.host.test>localhost</eva.mongo.host.test>
+    </properties>
 </project>
