--- a/eva-remapping-ingest/src/test/resources/ingest-remapped-variants.properties
+++ b/eva-remapping-ingest/src/test/resources/ingest-remapped-variants.properties
@@ -10,7 +10,7 @@ parameters.chunkSize=2
 build.version=|project.version|
 
 spring.data.mongodb.database=test-ingest-remapping
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=|eva.mongo.host.test|
 spring.data.mongodb.password=
 spring.data.mongodb.port=27017
 mongodb.read-preference=primary
