--- a/eva-accession-release/pom.xml
+++ b/eva-accession-release/pom.xml
@@ -69,6 +69,13 @@
                 </executions>
             </plugin>
         </plugins>
+
+        <resources>
+            <resource>
+                <directory>src/main/resources/</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
     </build>
 
     <properties>
