--- a/eva-accession-release/pom.xml
+++ b/eva-accession-release/pom.xml
@@ -70,6 +70,13 @@
             </plugin>
         </plugins>
 
+        <testResources>
+            <testResource>
+                <directory>src/test/resources/</directory>
+                <filtering>true</filtering>
+            </testResource>
+        </testResources>
+
         <resources>
             <resource>
                 <directory>src/main/resources/</directory>
