--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -156,7 +156,7 @@ deploy-tomcat-production-fallback:
         - apk add --update openssh-client
         - eval "$(ssh-agent)"
         - echo "$EVA_ETL_PRIVATE_KEY" | tr -d '\r' | ssh-add -
-        - TMP_NAME=$(basename $(ls $ARTIFACT_PATH))
+        - TMP_NAME=$(basename $(find $ARTIFACT_PATH -maxdepth 1 -type f ! -name '*exec.jar'))
         - ARTIFACT_NAME=${TMP_NAME%%.jar}-${ENVIRONMENT_NAME}.jar
         - scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null $ARTIFACT_PATH ${CLUSTER_USER}@${CLUSTER_LOGIN_NODE}:${EVA_SOFTWARE_PATH}/eva-accession/${DEPLOY_DIRECTORY}/${ARTIFACT_NAME}
         - ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${CLUSTER_USER}@${CLUSTER_LOGIN_NODE} "ln -fns ${EVA_SOFTWARE_PATH}/eva-accession/${DEPLOY_DIRECTORY}/${ARTIFACT_NAME} ${EVA_SOFTWARE_PATH}/eva-accession/${DEPLOY_DIRECTORY}/${SYMLINK_NAME}"
