--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ variables:
     CLUSTERING_ARTIFACT_PATH: eva-accession-clustering/target/eva-accession-clustering-*.jar
     ACCESSIONING_ARTIFACT_PATH: eva-accession-pipeline/target/eva-accession-pipeline-*.jar
     RELEASE_ARTIFACT_PATH: eva-accession-release/target/eva-accession-release-*.jar
-    REMAPPING_GET_SOURCE_ARTIFACT_PATH: eva-remapping-get-source/target/eva-remapping-get-source-*.jar
+    REMAPPING_GET_SOURCE_ARTIFACT_PATH: eva-remapping-get-source/target/eva-remapping-get-source-*exec.jar
     REMAPPING_INGEST_ARTIFACT_PATH: eva-remapping-ingest/target/eva-remapping-ingest-*.jar
     CLUSTERING_SYMLINK_NAME: "eva-accession-clustering.jar"
     ACCESSIONING_SYMLINK_NAME: "eva-accession-pipeline.jar"
@@ -156,7 +156,7 @@ deploy-tomcat-production-fallback:
         - apk add --update openssh-client
         - eval "$(ssh-agent)"
         - echo "$EVA_ETL_PRIVATE_KEY" | tr -d '\r' | ssh-add -
-        - TMP_NAME=$(basename $(find $ARTIFACT_PATH -maxdepth 1 -type f ! -name '*exec.jar'))
+        - TMP_NAME=$(basename $(ls $ARTIFACT_PATH))
         - ARTIFACT_NAME=${TMP_NAME%%.jar}-${ENVIRONMENT_NAME}.jar
         - scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null $ARTIFACT_PATH ${CLUSTER_USER}@${CLUSTER_LOGIN_NODE}:${EVA_SOFTWARE_PATH}/eva-accession/${DEPLOY_DIRECTORY}/${ARTIFACT_NAME}
         - ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${CLUSTER_USER}@${CLUSTER_LOGIN_NODE} "ln -fns ${EVA_SOFTWARE_PATH}/eva-accession/${DEPLOY_DIRECTORY}/${ARTIFACT_NAME} ${EVA_SOFTWARE_PATH}/eva-accession/${DEPLOY_DIRECTORY}/${SYMLINK_NAME}"
@@ -220,7 +220,7 @@ deploy-remapping-get-source-jar-development:
     variables:
         ENVIRONMENT_NAME: development
         ARTIFACT_PATH: $REMAPPING_GET_SOURCE_ARTIFACT_PATH
-        DEPLOY_DIRECTORY: remapping_get_source_development
+        DEPLOY_DIRECTORY: remapping_exporter_development
         SYMLINK_NAME: $REMAPPING_GET_SOURCE_SYMLINK_NAME
     dependencies:
         - package-development
@@ -285,7 +285,7 @@ deploy-remapping-get-source-jar-production:
     variables:
         ENVIRONMENT_NAME: production
         ARTIFACT_PATH: $REMAPPING_GET_SOURCE_ARTIFACT_PATH
-        DEPLOY_DIRECTORY: remapping_get_source_production
+        DEPLOY_DIRECTORY: remapping_exporter_production
         SYMLINK_NAME: $REMAPPING_GET_SOURCE_SYMLINK_NAME
     dependencies:
         - package-production
