enable tests on feature branch

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches: [ master ]
   pull_request:
-    branches: [ master ]
+    # Temporarily run tests on the feature branch until merged to master
+    branches: [ master, feature/ws-contig-alias-integration ]
 
 jobs:
   build:
