Create deprecation module for study deprecation

--- a/eva-accession-deprecate/src/test/resources/study-submitted-variants-test.properties
+++ b/eva-accession-deprecate/src/test/resources/study-submitted-variants-test.properties
@@ -1,3 +1,8 @@
+parameters.assemblyAccession=GCA_000000001.1
+parameters.study=study1
+parameters.deprecationIdSuffix=TEST
+parameters.deprecationReason=DEPRECATION_REASON
+
 accessioning.instanceId=test-instance-01
 accessioning.submitted.categoryId=test-ss
 accessioning.clustered.categoryId=test-rs
