EVA mongo host parameter in POM

--- a/eva-accession-deprecate/pom.xml
+++ b/eva-accession-deprecate/pom.xml
@@ -55,4 +55,8 @@
             </plugin>
         </plugins>
     </build>
+
+    <properties>
+        <eva.mongo.host.test>localhost</eva.mongo.host.test>
+    </properties>
 </project>
