--- a/eva-accession-deprecate/src/test/resources/study-submitted-variants-test.properties
+++ b/eva-accession-deprecate/src/test/resources/study-submitted-variants-test.properties
@@ -14,7 +14,7 @@ accessioning.monotonic.test-rs.blockSize=100000
 accessioning.monotonic.test-rs.blockStartValue=4
 accessioning.monotonic.test-rs.nextBlockInterval=1000000000
 
-spring.data.mongodb.database=sve-deprecation-test
+spring.data.mongodb.database=test-db
 # This symbolic variable is required because
 # this will be replaced with a default value "localhost" when run locally
 # (due to the filtering attribute specified in this project's POM)
