Add count stats parameters

--- a/eva-accession-deprecate/src/test/resources/study-submitted-variants-test.properties
+++ b/eva-accession-deprecate/src/test/resources/study-submitted-variants-test.properties
@@ -3,6 +3,10 @@ parameters.study=study1
 parameters.deprecationIdSuffix=TEST
 parameters.deprecationReason=DEPRECATION_REASON
 
+eva.count-stats.url=http://localhost:8080
+eva.count-stats.username=username
+eva.count-stats.password=password
+
 accessioning.instanceId=test-instance-01
 accessioning.submitted.categoryId=test-ss
 accessioning.clustered.categoryId=test-rs
