--- a/eva-accession-deprecate/pom.xml
+++ b/eva-accession-deprecate/pom.xml
@@ -15,7 +15,8 @@
     <dependencies>
         <dependency>
             <groupId>uk.ac.ebi.eva</groupId>
-            <artifactId>eva-accession-core</artifactId>
+            <artifactId>eva-accession-clustering</artifactId>
+            <version>0.6.10-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.eva</groupId>
