add clustering by study job

--- a/eva-accession-clustering/src/main/resources/application.properties
+++ b/eva-accession-clustering/src/main/resources/application.properties
@@ -11,6 +11,9 @@ parameters.vcf=
 # the project accession is required only for CLUSTERING_FROM_VCF
 parameters.projectAccession=
 
+# comma-separated project accessions, required only for STUDY_CLUSTERING_JOB
+parameters.projects=
+
 parameters.chunkSize=100
 parameters.allowRetry = false
 
