--- a/eva-accession-clustering/src/test/resources/clustering-issuance-test.properties
+++ b/eva-accession-clustering/src/test/resources/clustering-issuance-test.properties
@@ -1,5 +1,6 @@
 parameters.vcf=src/test/resources/input-files/vcf/aggregated_accessioned.vcf.gz
 parameters.projectAccession=projectId_1
+parameters.projects=projectId_2,projectId_3
 parameters.assemblyAccession=GCA_000000001.1
 parameters.remappedFrom=ASM1
 parameters.chunkSize=2
@@ -13,7 +14,7 @@ accessioning.submitted.categoryId=ss
 accessioning.clustered.categoryId=rs
 
 accessioning.monotonic.ss.blockSize=100000
-accessioning.monotonic.ss.blockStartValue=5000000000
+accessioning.monotonic.ss.blockStartValue=5
 accessioning.monotonic.ss.nextBlockInterval=1000000000
 accessioning.monotonic.rs.blockSize=100000
 accessioning.monotonic.rs.blockStartValue=3000000000
