--- a/eva-accession-clustering/src/test/resources/clustering-writer-test.properties
+++ b/eva-accession-clustering/src/test/resources/clustering-writer-test.properties
@@ -1,5 +1,6 @@
 parameters.vcf=src/test/resources/input-files/vcf/aggregated_accessioned.vcf.gz
 parameters.projectAccession=projectId_1
+parameters.projects=projectId_2,projectId_3
 parameters.assemblyAccession=asm2
 parameters.remappedFrom=asm1
 parameters.chunkSize=2
