Parameter name projectAccession instead of study - consistent with other pipelines

--- a/eva-accession-deprecate/src/main/resources/application.properties
+++ b/eva-accession-deprecate/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 parameters.assemblyAccession=
-parameters.study=
+parameters.projectAccession=
 parameters.deprecationIdSuffix=
 parameters.deprecationReason=
 
