--- a/eva-accession-deprecate/src/test/resources/study-submitted-variants-test.properties
+++ b/eva-accession-deprecate/src/test/resources/study-submitted-variants-test.properties
@@ -1,5 +1,5 @@
 parameters.assemblyAccession=GCA_000000001.1
-parameters.study=study1
+parameters.projectAccession=study1
 parameters.deprecationIdSuffix=TEST
 parameters.deprecationReason=DEPRECATION_REASON
 
