--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
             </dependency>
             <dependency>
                 <groupId>uk.ac.ebi.eva</groupId>
+                <artifactId>eva-accession-clustering</artifactId>
+                <version>0.6.10-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>uk.ac.ebi.eva</groupId>
                 <artifactId>eva-remapping-get-source</artifactId>
                 <version>0.6.10-SNAPSHOT</version>
             </dependency>
