--- a/eva-accession-deprecate/src/main/resources/application.properties
+++ b/eva-accession-deprecate/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+parameters.assemblyAccession=
+parameters.projectAccession=
+parameters.deprecationIdSuffix=
+parameters.deprecationReason=
+
 accessioning.instanceId=
 accessioning.submitted.categoryId=ss
 accessioning.clustered.categoryId=rs
