--- a/eva-accession-clustering/src/main/resources/application.properties
+++ b/eva-accession-clustering/src/main/resources/application.properties
@@ -14,6 +14,9 @@ parameters.projectAccession=
 # comma-separated project accessions, required only for STUDY_CLUSTERING_JOB
 parameters.projects=
 
+# full path to the RS report that contains RS IDs that were created in the database along with the hashes
+parameters.rsReportPath=
+
 parameters.chunkSize=100
 parameters.allowRetry = false
 
