--- a/eva-accession-clustering/src/test/resources/clustering-issuance-test.properties
+++ b/eva-accession-clustering/src/test/resources/clustering-issuance-test.properties
@@ -3,6 +3,7 @@ parameters.projectAccession=projectId_1
 parameters.projects=projectId_2,projectId_3
 parameters.assemblyAccession=GCA_000000001.1
 parameters.remappedFrom=ASM1
+parameters.rsReportPath=src/test/resources/output-files/rsReport.txt
 parameters.chunkSize=2
 
 eva.count-stats.url=http://localhost:8080
