--- a/eva-accession-clustering/src/test/resources/merge-split-test.properties
+++ b/eva-accession-clustering/src/test/resources/merge-split-test.properties
@@ -2,6 +2,7 @@ parameters.vcf=src/test/resources/input-files/vcf/aggregated_accessioned.vcf.gz
 parameters.projectAccession=projectId_1
 parameters.assemblyAccession=GCA_000000001.1
 parameters.remappedFrom=ASM1
+parameters.rsReportPath=src/test/resources/output-files/rsReport.txt
 parameters.chunkSize=2
 
 eva.count-stats.url=http://localhost:8080
