--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>4.13</junit.version>
-        <variation-commons-version>0.8.0</variation-commons-version>
+        <variation-commons-version>0.8.1</variation-commons-version>
         <accession-commons-version>0.7.9</accession-commons-version>
     </properties>
 
@@ -154,6 +154,17 @@
             </snapshots>
         </repository>
     </repositories>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>cloudsmith</id>
+            <url>https://maven.cloudsmith.io/ebivariation/packages/</url>
+        </snapshotRepository>
+        <repository>
+            <id>cloudsmith</id>
+            <url>https://maven.cloudsmith.io/ebivariation/packages/</url>
+        </repository>
+    </distributionManagement>
 
     <build>
         <plugins>
