--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
                 <groupId>uk.ac.ebi.eva</groupId>
                 <artifactId>eva-metrics</artifactId>
                 <version>0.0.2</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-web</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.postgresql</groupId>
