Remove circular dependencies

--- a/eva-accession-core/pom.xml
+++ b/eva-accession-core/pom.xml
@@ -57,6 +57,12 @@
             <groupId>uk.ac.ebi.eva</groupId>
             <artifactId>eva-common-groovyutils</artifactId>
             <version>0.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>uk.ac.ebi.eva</groupId>
+                    <artifactId>eva-accession</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
