Remove circular dependency on eva-accession-core

--- a/eva-accession-core/pom.xml
+++ b/eva-accession-core/pom.xml
@@ -60,7 +60,7 @@
             <exclusions>
                 <exclusion>
                     <groupId>uk.ac.ebi.eva</groupId>
-                    <artifactId>eva-accession</artifactId>
+                    <artifactId>eva-accession-core</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
