--- a/eva-accession-release/src/main/resources/application.properties
+++ b/eva-accession-release/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.batch.job.names=ACCESSION_RELEASE_JOB
 
 parameters.assemblyAccession=
+parameters.taxonomyAccession=
 parameters.fasta=
 parameters.assemblyReportUrl=
 parameters.outputFolder=
