--- a/eva-accession-core/pom.xml
+++ b/eva-accession-core/pom.xml
@@ -21,6 +21,10 @@
             <artifactId>variation-commons-batch</artifactId>
         </dependency>
         <dependency>
+            <groupId>uk.ac.ebi.eva</groupId>
+            <artifactId>variation-commons-mongodb</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-batch</artifactId>
         </dependency>
