--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>4.13</junit.version>
-        <variation-commons-version>0.8.2</variation-commons-version>
+        <variation-commons-version>0.8.3-SNAPSHOT</variation-commons-version>
         <accession-commons-version>0.7.9</accession-commons-version>
     </properties>
 
@@ -77,6 +77,11 @@
             <dependency>
                 <groupId>uk.ac.ebi.eva</groupId>
                 <artifactId>variation-commons-beacon</artifactId>
+                <version>${variation-commons-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>uk.ac.ebi.eva</groupId>
+                <artifactId>variation-commons-mongodb</artifactId>
                 <version>${variation-commons-version}</version>
             </dependency>
             <dependency>
