--- a/eva-accession-clustering/pom.xml
+++ b/eva-accession-clustering/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>eva-accession</artifactId>
         <groupId>uk.ac.ebi.eva</groupId>
-        <version>0.6.32-SNAPSHOT</version>
+        <version>0.6.32</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
