add jobs for recovering blocks for category ss and rs

--- a/eva-accession-clustering/src/test/resources/monotonic-accession-recovery-agent-category-rs.properties
+++ b/eva-accession-clustering/src/test/resources/monotonic-accession-recovery-agent-category-rs.properties
@@ -1,5 +1,13 @@
 recovery.cutoff.days=14
 
+spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
+spring.datasource.url=jdbc:hsqldb:mem:db;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
+spring.datasource.username=SA
+spring.datasource.password=
+spring.datasource.schema=test-data/contiguous_id_blocks_schema.sql
+spring.datasource.data=test-data/monotonic_accession_recovery_agent_test_data.sql
+spring.jpa.hibernate.ddl-auto=update
+
 parameters.vcf=src/test/resources/input-files/vcf/aggregated_accessioned.vcf.gz
 parameters.projectAccession=projectId_1
 parameters.projects=projectId_2,projectId_3
@@ -21,7 +29,6 @@ accessioning.monotonic.ss.nextBlockInterval=1000000000
 accessioning.monotonic.rs.blockSize=100000
 accessioning.monotonic.rs.blockStartValue=3000000000
 accessioning.monotonic.rs.nextBlockInterval=1000000000
-
 
 spring.data.mongodb.database=test-db
 spring.data.mongodb.host=|eva.mongo.host.test|
