fix count-stats in tests

--- a/eva-accession-pipeline/src/test/resources/properties/accession-pipeline-interval-test.properties
+++ b/eva-accession-pipeline/src/test/resources/properties/accession-pipeline-interval-test.properties
@@ -4,6 +4,10 @@ accessioning.monotonic.test-pipeline-ss.blockSize=2
 accessioning.monotonic.test-pipeline-ss.blockStartValue=500
 accessioning.monotonic.test-pipeline-ss.nextBlockInterval=10
 
+eva.count-stats.url=http://localhost:8080
+eva.count-stats.username=username
+eva.count-stats.password=password
+
 parameters.assemblyAccession=assembly
 parameters.taxonomyAccession=1111
 parameters.projectAccession=project
