renaming the parameter

--- a/eva-accession-ws/src/main/resources/application.properties
+++ b/eva-accession-ws/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.data.mongodb.uri=mongodb://|eva.mongo.user|:|eva.mongo.passwd.url-encoded
 spring.data.mongodb.database=|eva.accession.mongo.database|
 mongodb.read-preference=|eva.mongo.read-preference|
 
-mongodb.write-concern=ACKNOWLEDGED
+parameters.mongodb.writeConcern=ACKNOWLEDGED
 
 human.mongodb.uri=mongodb://|eva.mongo.user|:|eva.mongo.passwd.url-encoded|@|eva.mongo.host|/admin
 human.mongodb.database=|eva.accession.mongo.human.database|
