EVA-3806 Remove majority write concern from Eva-Accession-WS (#475)
* remove majority write concern from Eva-Accession-WS

--- a/eva-accession-ws/src/main/resources/application.properties
+++ b/eva-accession-ws/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.data.mongodb.uri=mongodb://|eva.mongo.user|:|eva.mongo.passwd.url-encoded
 spring.data.mongodb.database=|eva.accession.mongo.database|
 mongodb.read-preference=|eva.mongo.read-preference|
 
+parameters.mongodb.writeConcern=ACKNOWLEDGED
+
 human.mongodb.uri=mongodb://|eva.mongo.user|:|eva.mongo.passwd.url-encoded|@|eva.mongo.host|/admin
 human.mongodb.database=|eva.accession.mongo.human.database|
 
